--- a/dirs/Cargo.toml
+++ b/dirs/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "dirs"
-version = "0.1.0-alpha"
+name = "test-fuzz-dirs"
+version = "0.1.0-alpha.0"
 edition = "2018"
+
+description = "test-fuzz-dirs"
+
+authors = ["Samuel E. Moelius III <sam@moeli.us>"]
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/smoelius/test-fuzz"
 
 [dependencies]
 cargo_metadata = "0.11.1"
