--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -17,7 +17,7 @@ darling = "0.10.2"
 proc-macro2 = "1.0.19"
 quote = "1.0.7"
 syn = "1.0.39"
-unzip3 = "1.0.0"
+unzip-n = "0.1.2"
 
 [features]
 logging = []
