--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/smoelius/test-fuzz"
 
 [dependencies]
-rust-crypto = { name = "crypto", version = "0.2.36" }
+rust-crypto = "0.2.36"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
 
