--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -13,10 +13,10 @@ repository = "https://github.com/smoelius/test-fuzz"
 proc-macro = true
 
 [dependencies]
-darling = "0.10.2"
+darling = "0.12.0"
 proc-macro2 = "1.0.24"
-quote = "1.0.7"
-syn = "1.0.48"
+quote = "1.0.8"
+syn = { version = "1.0.60", features = ["full", "visit-mut"] }
 unzip-n = "0.1.2"
 
 [features]
