Better version handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test-fuzz"
-version = "0.1.0-alpha.7"
+version = "0.1.0-alpha.9"
 edition = "2018"
 
 description = "To make fuzzing Rust easy"
@@ -12,8 +12,13 @@ repository = "https://github.com/smoelius/test-fuzz"
 [dependencies]
 afl = "0.8.0"
 
-runtime = { path = "./runtime", package = "test-fuzz-runtime", version = "0.1.0-alpha" }
-test-fuzz-macro = { path = "./macro", version = "0.1.0-alpha" }
+runtime = { path = "./runtime", package = "test-fuzz-runtime", version = "=0.1.0-alpha.9" }
+test-fuzz-macro = { path = "./macro", version = "=0.1.0-alpha.9" }
+
+[dev-dependencies]
+cargo_metadata = "0.12.3"
+lazy_static = "1.4.0"
+semver = "0.11.0"
 
 [features]
 default = []
