--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-test-fuzz"
-version = "0.1.0-alpha.4"
+version = "0.1.0-alpha.9"
 edition = "2018"
 
 description = "cargo-test-fuzz"
@@ -20,11 +20,12 @@ cargo_metadata = "0.12.3"
 clap = "3.0.0-beta.2"
 env_logger = "0.8.2"
 log = "0.4.14"
+semver = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 subprocess = "0.2.6"
 
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "0.1.0-alpha" }
-test_fuzz = { path = "..", package = "test-fuzz", version = "0.1.0-alpha" }
+dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.9" }
+test-fuzz = { path = "..", version = "=0.1.0-alpha.9" }
 
 [dev-dependencies]
 assert_cmd = "1.0.2"
