Make afl version requirement strict

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/smoelius/test-fuzz"
 
 [dependencies]
-afl = "0.10.0"
+afl = "=0.10.0"
 
 runtime = { path = "./runtime", package = "test-fuzz-runtime", version = "=0.1.0-alpha.9" }
 test-fuzz-macro = { path = "./macro", version = "=0.1.0-alpha.9" }
