--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,9 +22,15 @@ jobs:
           # smoelius: The crates must be published in this order, which is a reverse topological
           # sort of `doc/crates.dot`.
           for X in dirs runtime macro . cargo-test-fuzz; do
-            # smoelius: Continue in case of a previous failed publish attempt.
-            cargo publish --manifest-path "$X"/Cargo.toml || true
-            # smoelius: Give `crate.io` a chance to update.
+            # smoelius: Continue if a previous publish attempt failed.
+            TMP="$(mktemp)"
+            cargo publish --manifest-path "$X"/Cargo.toml 2>"$TMP" 1>/dev/null || (
+              cat "$TMP" |
+              tee /dev/stderr |
+              tail -n 1 |
+              grep '^error: [^:]*: crate version `[^`]*` is already uploaded$'
+            )
+            # smoelius: Give `crates.io` a chance to update.
             sleep 1m
           done
 
