cargo-test-fuzz/tests/test.rs -> tests/default.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,9 @@ runtime = { path = "./runtime", package = "test-fuzz-runtime", version = "=0.1.0
 test-fuzz-macro = { path = "./macro", version = "=0.1.0-alpha.10" }
 
 [dev-dependencies]
+assert_cmd = "1.0.2"
 cargo_metadata = "0.12.3"
+dirs = { path = "./dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.10" }
 lazy_static = "1.4.0"
 semver = "0.11.0"
 
