--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/smoelius/test-fuzz"
 
 [dependencies]
 afl = "=0.10.0"
+serde = "1.0"
 
 runtime = { path = "./runtime", package = "test-fuzz-runtime", version = "=0.1.0-alpha.10" }
 test-fuzz-macro = { path = "./macro", version = "=0.1.0-alpha.10" }
