--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -16,7 +16,7 @@ proc-macro = true
 darling = "0.12.0"
 proc-macro2 = "1.0.24"
 quote = "1.0.8"
-syn = { version = "1.0.60", features = ["full", "visit-mut"] }
+syn = { version = "1.0.60", features = ["full", "parsing", "visit-mut"] }
 unzip-n = "0.1.2"
 
 [features]
