--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "cargo-test-fuzz"
-version = "0.1.0-alpha.11"
+version = "0.1.0-alpha.12"
 edition = "2018"
 
 description = "cargo-test-fuzz"
 
 authors = ["Samuel E. Moelius III <sam@moeli.us>"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/smoelius/test-fuzz"
+repository = "https://github.com/trailofbits/test-fuzz"
 
 [[bin]]
 name = "cargo-test-fuzz"
@@ -23,8 +23,8 @@ semver = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 subprocess = "0.2.6"
 
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.11" }
-test-fuzz = { path = "..", version = "=0.1.0-alpha.11" }
+dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.12" }
+test-fuzz = { path = "..", version = "=0.1.0-alpha.12" }
 
 [dev-dependencies]
 assert_cmd = "1.0.3"
