--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
 name = "test-fuzz-runtime"
-version = "0.1.0-alpha.11"
+version = "0.1.0-alpha.12"
 edition = "2018"
 
 description = "test-fuzz-runtime"
 
 authors = ["Samuel E. Moelius III <sam@moeli.us>"]
 license = "MIT OR Apache-2.0"
-repository = "https://github.com/smoelius/test-fuzz"
+repository = "https://github.com/trailofbits/test-fuzz"
 
 [dependencies]
 rust-crypto = "0.2.36"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
 
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.11" }
+dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.12" }
