--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -14,6 +14,7 @@ test-fuzz = { path = "..", version = "=0.1.0-alpha.12" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
+parse_duration = "2.1.1"
 
 [features]
 bar_fuzz = []
