--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -10,8 +10,9 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/trailofbits/test-fuzz"
 
 [dependencies]
-rust-crypto = "0.2.36"
+hex = "0.4.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_cbor = "0.11.1"
+sha-1 = "0.9.6"
 
 dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.16" }
