--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin/cargo_test_fuzz.rs"
 
 [dependencies]
 anyhow = "1.0.40"
+bitflags = "1.2.1"
 cargo_metadata = "0.13.1"
 clap = "3.0.0-beta.2"
 env_logger = "0.8.3"
