--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,7 +10,7 @@ path = "src/main.rs"
 
 [dependencies]
 serde = "1.0"
-test-fuzz = { path = "..", version = "=0.1.0-alpha.18" }
+test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.18" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
