--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -6,10 +6,19 @@ publish = false
 
 [[bin]]
 name = "hello-world"
-path = "src/main.rs"
+path = "src/bin/hello_world.rs"
 
 [dependencies]
+anyhow = "1.0.42"
+assert_cmd = "1.0.7"
+cargo_metadata = "0.13.1"
+if_chain = "1.0.1"
+log = "0.4.14"
 serde = "1.0.126"
+subprocess = "0.2.7"
+
+dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.18" }
+runtime = { path = "../runtime", package = "test-fuzz-runtime", version = "=0.1.0-alpha.18" }
 test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.18" }
 
 [dev-dependencies]
