--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -19,10 +19,12 @@ test-fuzz-macro = { path = "../macro", version = "=0.1.0-alpha.18" }
 [dev-dependencies]
 assert_cmd = "1.0.7"
 cargo_metadata = "0.13.1"
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.18" }
 lazy_static = "1.4.0"
 predicates = "2.0.0"
 semver = "0.11.0"
+
+dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.18" }
+examples = { path = "../examples", package = "test-fuzz-examples", version = "=0.1.0-alpha.18" }
 
 [features]
 default = []
