--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -25,7 +25,7 @@ serde = { version = "1.0.126", features = ["derive"] }
 subprocess = "0.2.7"
 
 dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.18" }
-test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.18" }
+test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.18", default-features = false }
 
 [dev-dependencies]
 assert_cmd = "1.0.7"
@@ -35,3 +35,6 @@ regex = "1.5.4"
 rlimit = "0.5.4"
 
 examples = { path = "../examples", package = "test-fuzz-examples", version = "=0.1.0-alpha.18" }
+
+[features]
+default = ["test-fuzz/serde_bincode"]
