--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -24,7 +24,7 @@ semver = "0.11.0"
 serde = { version = "1.0.126", features = ["derive"] }
 subprocess = "0.2.7"
 
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.21" }
+internal = { path = "../internal", package = "test-fuzz-internal", version = "=0.1.0-alpha.21" }
 test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.21", default-features = false }
 
 [dev-dependencies]
@@ -33,8 +33,6 @@ lazy_static = "1.4.0"
 predicates = "2.0.0"
 regex = "1.5.4"
 rlimit = "0.5.4"
-
-examples = { path = "../examples", package = "test-fuzz-examples", version = "=0.1.0-alpha.21" }
 
 [features]
 default = ["test-fuzz/serde_bincode"]
