--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -1,13 +1,24 @@
 [package]
-name = "test-fuzz-dirs"
+name = "test-fuzz-internal"
 version = "0.1.0-alpha.21"
 edition = "2018"
 
-description = "test-fuzz-dirs"
+description = "test-fuzz-internal"
 
 authors = ["Samuel E. Moelius III <sam@moeli.us>"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/trailofbits/test-fuzz"
 
 [dependencies]
+anyhow = "1.0.42"
+assert_cmd = "1.0.7"
 cargo_metadata = "0.13.1"
+if_chain = "1.0.1"
+log = "0.4.14"
+serde = "1.0.126"
+subprocess = "0.2.7"
+
+[features]
+default = []
+serde_bincode = []
+serde_cbor = []
