--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.126", features = ["derive"] }
 serde_cbor = { version = "0.11.1", optional = true }
 sha-1 = "0.9.6"
 
-dirs = { path = "../dirs", package = "test-fuzz-dirs", version = "=0.1.0-alpha.21" }
+internal = { path = "../internal", package = "test-fuzz-internal", version = "=0.1.0-alpha.21" }
 
 [features]
 default = []
