--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -21,7 +21,7 @@ subprocess = "0.2.7"
 toolchain_find = "0.2.0"
 unzip-n = "0.1.2"
 
+internal = { path = "../internal", package = "test-fuzz-internal", version = "=0.1.0-alpha.22" }
+
 [features]
 persistent = []
-serde_bincode = []
-serde_cbor = []
