--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,30 @@ jobs:
 
     - name: Test
       run: |
-        cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null |
-          grep '^Error: `[^`]*` depends on `afl [^`]*`, which is incompatible with `cargo-afl [^`]*`.$'
+        OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+        echo "$OUTPUT" | grep '^Error: `[^`]*` depends on `afl [^`]*`, which is incompatible with `cargo-afl [^`]*`.$'
+
+  test-newer-afl:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install llvm
+      run: sudo apt-get install llvm
+
+    - name: Install afl 0.10.0
+      run: cargo install afl --version=0.10.0
+
+    - name: Require afl 0.10.1
+      run: |
+        sed -i 's/afl = "[^"]*"/afl = "=0.10.1"/' test-fuzz/Cargo.toml
+
+    - name: Test
+      run: |
+        OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+        echo "$OUTPUT" | grep '^`[^`]*` depends on `afl [^`]*`, which is newer than `cargo-afl [^`]*`.'
+        echo "$OUTPUT" | grep 'Consider upgrading with `cargo install afl --force --version [^`]*`.$'
 
   test-incompatible-test-fuzz:
     runs-on: ubuntu-latest
@@ -94,8 +116,8 @@ jobs:
 
     - name: Test
       run: |
-        cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null |
-          grep '^Error: `[^`]*` depends on `test-fuzz [^`]*`, which is incompatible with `cargo-test-fuzz [^`]*`.$'
+        OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+        echo "$OUTPUT" | grep '^Error: `[^`]*` depends on `test-fuzz [^`]*`, which is incompatible with `cargo-test-fuzz [^`]*`.$'
 
   test-newer-test-fuzz:
     runs-on: ubuntu-latest
@@ -117,5 +139,6 @@ jobs:
 
     - name: Test
       run: |
-        cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null |
-          grep '^`[^`]*` depends on `test-fuzz [^`]*`, which is newer than `cargo-test-fuzz [^`]*`.'
+        OUTPUT="`cargo run -p cargo-test-fuzz -- test-fuzz -p test-fuzz-examples --features=test-fuzz/serde_bincode --no-run 2>&1 1>/dev/null || true`"
+        echo "$OUTPUT" | grep '^`[^`]*` depends on `test-fuzz [^`]*`, which is newer than `cargo-test-fuzz [^`]*`.'
+        echo "$OUTPUT" | grep 'Consider upgrading with `cargo install cargo-test-fuzz --force --version [^`]*`.$'
