--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -28,11 +28,12 @@ internal = { path = "../internal", package = "test-fuzz-internal", version = "=0
 test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.24", default-features = false }
 
 [dev-dependencies]
-assert_cmd = "1.0.7"
+assert_cmd = "2.0.0"
 lazy_static = "1.4.0"
-predicates = "2.0.0"
+predicates = "2.0.1"
 regex = "1.5.4"
 rlimit = "0.6.2"
+test-env-log = "0.2.7"
 
 [features]
 default = ["test-fuzz/serde_bincode"]
