--- a/internal/Cargo.toml
+++ b/internal/Cargo.toml
@@ -11,12 +11,13 @@ repository = "https://github.com/trailofbits/test-fuzz"
 
 [dependencies]
 anyhow = "1.0.42"
-assert_cmd = "1.0.7"
+assert_cmd = "2.0.0"
 cargo_metadata = "0.14.0"
 if_chain = "1.0.1"
 log = "0.4.14"
 proc-macro2 = "1.0.28"
 quote = "1.0.9"
+retry = "1.2.1"
 serde = "1.0.126"
 strum_macros = "0.21.0"
 subprocess = "0.2.7"
