--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install llvm
         run: sudo apt-get install llvm
 
+      - name: Prettier
+        run: npm install -g prettier && prettier --check '**/*.md' '**/*.yml'
+
       - name: Format
         run: cargo fmt && git diff --exit-code
 
