--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -14,6 +14,7 @@ proc-macro = true
 
 [dependencies]
 darling = "0.13.0"
+if_chain = "1.0.1"
 proc-macro2 = "1.0.27"
 quote = "1.0.9"
 syn = { version = "1.0.74", features = ["full", "parsing", "visit-mut"] }
