--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,6 +15,7 @@ test-fuzz = { path = "../test-fuzz", version = "=0.1.0-alpha.24", default-featur
 [dev-dependencies]
 lazy_static = "1.4.0"
 parse_duration = "2.1.1"
+serde_json = "1.0.66"
 
 [features]
 bar_fuzz = []
