--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Prettier
         run: npm install -g prettier && prettier --check '**/*.md' '**/*.yml'
 
+      - name: Cargo sort
+        run: |
+          cargo install cargo-sort
+          find . -name Cargo.toml | xargs -n 1 dirname | xargs -n 1 cargo sort --check --grouped
+
       - name: Format
         run: cargo fmt && git diff --exit-code
 
