--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,3 +1,6 @@
+# Dependabot only makes Rust security updates if "Cargo.lock" exists
+# https://github.com/dependabot/dependabot-core/issues/2011
+
 version: 2
 updates:
   - package-ecosystem: cargo
