--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,4 @@
-# Dependabot only makes Rust security updates if "Cargo.lock" exists
+# smoelius: 'Dependabot only makes Rust security updates if "Cargo.lock" exists'
 # https://github.com/dependabot/dependabot-core/issues/2011
 
 version: 2
