--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Check CHANGELOG.md
+        run: ./scripts/check_CHANGELOG.sh "${{ github.ref }}"
+
       - name: Install llvm
         run: sudo apt-get install llvm
 
@@ -21,7 +24,7 @@ jobs:
         run: |
           # smoelius: The crates must be published in this order, which is a reverse topological
           # sort of `doc/crates.dot`.
-          for X in internal runtime macro test-fuzz cargo-test-fuzz; do
+          for X in internal macro runtime test-fuzz cargo-test-fuzz; do
             # smoelius: Continue if a previous publish attempt failed.
             TMP="$(mktemp)"
             cargo publish --manifest-path "$X"/Cargo.toml 2>"$TMP" || (
