Use `nonreentrant_function_in_test` lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ members = [
 
 [workspace.metadata.dylint]
 libraries = [
+    { git = "https://github.com/trailofbits/dylint", pattern = "examples/nonreentrant_function_in_test" },
     { git = "https://github.com/trailofbits/dylint", pattern = "examples/try_io_result" }
 ]
