--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -15,6 +15,7 @@ proc-macro = true
 [dependencies]
 darling = "0.13.0"
 if_chain = "1.0.2"
+lazy_static = "1.4.0"
 proc-macro2 = "1.0.29"
 quote = "1.0.9"
 subprocess = "0.2.7"
