--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,5 @@ sha-1 = "0.9.8"
 internal = { path = "../internal", package = "test-fuzz-internal", version = "=0.1.0" }
 
 [features]
-default = []
-serde_bincode = ["bincode"]
-# serde_cbor is implicit.
+__serde_bincode = ["bincode"]
+__serde_cbor = ["serde_cbor"]
