--- a/cargo-test-fuzz/Cargo.toml
+++ b/cargo-test-fuzz/Cargo.toml
@@ -20,6 +20,7 @@ cargo_metadata = "0.14.0"
 clap = "3.0.0-beta.4"
 env_logger = "0.9.0"
 log = "0.4.14"
+remain = "0.2.2"
 semver = "1.0.4"
 serde = { version = "1.0.130", features = ["derive"] }
 subprocess = "0.2.7"
