Ensure README is up to date

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Format
         run: cargo fmt && git diff --exit-code
 
+      - name: Format README
+        run: ./scripts/update_README.sh && git diff --exit-code
+
       - name: License
         run: |
           cargo install cargo-license || true
