--- a/test-fuzz/Cargo.toml
+++ b/test-fuzz/Cargo.toml
@@ -22,6 +22,7 @@ assert_cmd = "2.0.1"
 cargo_metadata = "0.14.0"
 lazy_static = "1.4.0"
 predicates = "2.0.2"
+regex = "1.5.4"
 
 [features]
 default = ["serde_bincode"]
